syntax = "proto3";

import "google/protobuf/Empty.proto";

 service NewsService {
    rpc GetNews (google.protobuf.Empty) returns (NewsList) {}
}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string createdAt = 4;
}

message NewsList {
    repeated News news = 1;
}

